@@ -6,6 +6,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Changed
+- Fix string return in convertString
+
 ## [1.0.0] - 2021-09-05
 ### Added
 - Ninja Cat
